--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,6 +59,26 @@
       "target": "CLI",
       "configuration": "release",
       "preLaunchTask": "swift: Build Release CLI"
+    },
+    {
+      "type": "swift",
+      "request": "launch",
+      "args": [],
+      "cwd": "${workspaceFolder:swift-agent}",
+      "name": "Debug swift-agent-cli",
+      "target": "swift-agent-cli",
+      "configuration": "debug",
+      "preLaunchTask": "swift: Build Debug swift-agent-cli"
+    },
+    {
+      "type": "swift",
+      "request": "launch",
+      "args": [],
+      "cwd": "${workspaceFolder:swift-agent}",
+      "name": "Release swift-agent-cli",
+      "target": "swift-agent-cli",
+      "configuration": "release",
+      "preLaunchTask": "swift: Build Release swift-agent-cli"
     }
   ]
 }
